--- a/components/toxic-prediction-ui/src/templates/response-page.html
+++ b/components/toxic-prediction-ui/src/templates/response-page.html
@@ -41,7 +41,7 @@
         }
 
         /* Container for layout */
-        .tg  {
+        .tg {
             border-collapse: collapse;
             border-spacing: 0;
             border-color: transparent;
@@ -52,6 +52,7 @@
             word-break: normal;
             padding-bottom: 60px;
         }
+
         .tg td {
             border-color: transparent;
             border-width: 1px;
@@ -76,6 +77,7 @@
             text-align: left;
             vertical-align: top
         }
+
         .tg .tg-0lax {
             text-align: left;
             vertical-align: top
@@ -83,52 +85,52 @@
     </style>
 </head>
 <body>
-        <table class="tg">
-        <thead>
-          <tr>
-            <th class="tg-0lax"><span style="font-weight:bold">Toxic Category</span></th>
-            <th class="tg-1wig">Score of Toxicity</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="tg-0lax">Identity Hate</td>
-            <td class="tg-0lax">{{str(float(prediction_response["identity_hate"])*100) + "%"}}</td>
-          </tr>
-          <tr>
-            <td class="tg-0lax">Insult</td>
-            <td class="tg-0lax">{{str(float(prediction_response["insult"])*100) + "%"}}</td>
-          </tr>
-          <tr>
-            <td class="tg-0lax">Obscene </td>
-            <td class="tg-0lax">{{str(float(prediction_response["obscene"])*100) + "%"}}</td>
-          </tr>
-          <tr>
-            <td class="tg-0lax">Severe Toxic</td>
-            <td class="tg-0lax">{{str(float(prediction_response["severe_toxic"])*100) + "%"}}</td>
-          </tr>
-          <tr>
-            <td class="tg-0lax">Threat</td>
-            <td class="tg-0lax">{{str(float(prediction_response["threat"])*100) + "%"}}</td>
-          </tr>
-          <tr>
-            <td class="tg-0lax">Toxic</td>
-            <td class="tg-0lax">{{str(float(prediction_response["toxic"])*100) + "%" }}</td>
-          </tr>
-        </tbody>
-        </table>
-    
-    
+<table class="tg">
+    <thead>
+    <tr>
+        <th class="tg-0lax"><span style="font-weight:bold">Toxic Category</span></th>
+        <th class="tg-1wig">Score of Toxicity</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td class="tg-0lax">Identity Hate</td>
+        <td class="tg-0lax">{{str(float(prediction_response["identity_hate"])*100) + "%"}}</td>
+    </tr>
+    <tr>
+        <td class="tg-0lax">Insult</td>
+        <td class="tg-0lax">{{str(float(prediction_response["insult"])*100) + "%"}}</td>
+    </tr>
+    <tr>
+        <td class="tg-0lax">Obscene</td>
+        <td class="tg-0lax">{{str(float(prediction_response["obscene"])*100) + "%"}}</td>
+    </tr>
+    <tr>
+        <td class="tg-0lax">Severe Toxic</td>
+        <td class="tg-0lax">{{str(float(prediction_response["severe_toxic"])*100) + "%"}}</td>
+    </tr>
+    <tr>
+        <td class="tg-0lax">Threat</td>
+        <td class="tg-0lax">{{str(float(prediction_response["threat"])*100) + "%"}}</td>
+    </tr>
+    <tr>
+        <td class="tg-0lax">Toxic</td>
+        <td class="tg-0lax">{{format(float(prediction_response["toxic"])*100, '.3f')}} %</td>
+    </tr>
+    </tbody>
+</table>
+
+
 {% if float(prediction_response["toxic"]) > 0.7 %}
-    <p>Hey there! Your message might have a touch of toxicity.</p>
-    <p>Take a moment to reconsider your words and let's keep the vibe sweet and positive for each other! 💖✨</p>
+<p>Hey there! Your message might have a touch of toxicity.</p>
+<p>Take a moment to reconsider your words and let's keep the vibe sweet and positive for each other! 💖✨</p>
 {% else %}
-    <p>Hey there! Your message is all good, no toxicity detected.</p>
-    <p>Keep spreading the kindness and positive vibes! 🌸💕</p>
+<p>Hey there! Your message is all good, no toxicity detected.</p>
+<p>Keep spreading the kindness and positive vibes! 🌸💕</p>
 {% endif %}
-        <form action="/" method="GET" class="layout-container">
-            <input type='submit' value='Make new prediction!' action=""/>
-        </form>
+<form action="/" method="GET" class="layout-container">
+    <input type='submit' value='Make new prediction!' action=""/>
+</form>
 
 </body>
 </html>
